clientapi: prepare 2.0.0, refactor alerts, disable japicmp. Signed-off-by: Ahmad Al-Sanie
Signed-off-by: Ahmad <ahmad.alsanie@hotmail.com>